
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef unsigned int uint64_t ;
struct TYPE_2__ {unsigned int* pages_addr; scalar_t__ ptr; struct page** pages; int ready; } ;
struct radeon_device {TYPE_1__ gart; } ;
struct page {int dummy; } ;
typedef unsigned int dma_addr_t ;


 int EINVAL ;
 unsigned int PAGE_SIZE ;
 unsigned int RADEON_GPU_PAGE_SIZE ;
 int WARN (int,char*) ;
 int mb () ;
 int radeon_gart_set_page (struct radeon_device*,unsigned int,unsigned int) ;
 int radeon_gart_tlb_flush (struct radeon_device*) ;

int radeon_gart_bind(struct radeon_device *rdev, unsigned offset,
       int pages, struct page **pagelist, dma_addr_t *dma_addr)
{
 unsigned t;
 unsigned p;
 uint64_t page_base;
 int i, j;

 if (!rdev->gart.ready) {
  WARN(1, "trying to bind memory to uninitialized GART !\n");
  return -EINVAL;
 }
 t = offset / RADEON_GPU_PAGE_SIZE;
 p = t / (PAGE_SIZE / RADEON_GPU_PAGE_SIZE);

 for (i = 0; i < pages; i++, p++) {
  rdev->gart.pages_addr[p] = dma_addr[i];
  rdev->gart.pages[p] = pagelist[i];
  if (rdev->gart.ptr) {
   page_base = rdev->gart.pages_addr[p];
   for (j = 0; j < (PAGE_SIZE / RADEON_GPU_PAGE_SIZE); j++, t++) {
    radeon_gart_set_page(rdev, t, page_base);
    page_base += RADEON_GPU_PAGE_SIZE;
   }
  }
 }
 mb();
 radeon_gart_tlb_flush(rdev);
 return 0;
}
